[package]
name = "picorv32"
version = "0.1.2"
repository = "https://github.com/ilya-epifanov/picorv32"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to picorv32 RISC-V processor"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
bare-metal = "0.2.0"

[build-dependencies]
regex = "1.2.0"

[features]
inline-asm = []
const-fn = ["bare-metal/const-fn"]
interrupts-qregs = []
