[package]
name = "coucal-rs"
version = "0.1.4"
repository = "https://github.com/tobygomersall/coucal-rs"
authors = ["Toby Gomersall <toby.gomersall@smartacoustics.co.uk>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to picorv32 RISC-V processor"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
bare-metal = "0.2.0"

[build-dependencies]
regex = "1.2.0"

[features]
const-fn = ["bare-metal/const-fn"]
interrupts-qregs = []
